--- a/src/Components/signup.css
+++ b/src/Components/signup.css
@@ -1,13 +1,21 @@
 .parent{
   background-color: #36C1E4;
   justify-content: center !important;
-  border-radius: 5%;
+  border-radius: 4%;
+  border: 2px solid #36C1E4;
   padding-left: 0;
+
+}
+.errors{
+  position: absolute;
+  font-size: 14px;
 }
 .pay{
   background-color: #FFFFFF;
   border-top-right-radius: 10%;
   border-bottom-right-radius: 10% ;
+  border-top-left-radius: 2%;
+  border-bottom-left-radius: 2%;
 }
 .signup{
   background-color: #36C1E4;
@@ -56,6 +64,7 @@ input{
   color: #FFFFFF;
   background-color: #36C1E4;
   border: none;
+  width: 200px !important;
   /* border-bottom: 3px solid white; */
 }
 input::placeholder{
@@ -68,4 +77,70 @@ input:focus{
 }
 .gender{
   height: 30px;
+}
+select{
+  border:none;
+  background-color: #36C1E4;
+  color: #FFFFFF;
+}
+select:focus{
+  outline: none;
+  border: none;
+}
+.check-container {
+  margin-left: 4cm;
+  display: block;
+  position: relative;
+  margin-bottom: 12px;
+  cursor: pointer;
+}
+.container input[type=checkbox] {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+  border: 2px solid white;
+  border-radius: 3% !important;
+}
+.container:hover input[type=checkbox] ~ .checkmark {
+  background-color: transparent;
+  border: 2px solid white;
+  border-radius: 3%;
+}
+.container input[type=checkbox]:checked ~ .checkmark {
+  background-color: transparent;
+  border: 2px solid white;
+  border-radius: 3% !important;
+}
+.member{
+  margin-left: 80px
+}
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+.container input[type=checkbox]:checked ~ .checkmark:after {
+  display: block;
+}
+.container .checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border: 2px solid white;
+  border-radius: 3%;
+  border-width: 0 3px 3px 0;
+  transform: rotate(45deg);
 }
